--- a/index.html
+++ b/index.html
@@ -4,51 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Hermes.AI</title>
   </head>
   <body>
 
-    <header>
-      <h1>Hermes Insights</h1>
-    </header>
+    <div id="app">
+      <header>
+        <h1>Hermes Insights</h1>
+      </header>
     
 
-    <main>
-      <form id="form-text">
-        <textarea name="textForAnalysis" id="main-text" placeholder="Digite seu e-mail/texto aqui"></textarea>
+      <main>
 
-        <ul>
-          <li onclick="getElementById('main-text').innerHTML = 'TESTETESTE'">Exemplo de e-mail produtivo</li>
-          <li>Exemplo de e-mail produtivo</li>
-          <li>Exemplo de e-mail produtivo</li>
-        </ul>
-        <input type="file">
-        <button type="submit">Analisar texto</button>
-      </form>
+        <p class="analysis-tuto-text">Cole o texto de um e-mail ou anexe um arquivo (.txt, .pdf, .docx) para classificá-lo e obter uma sugestão de resposta.</p>
 
-      <div class="analysis-response">
+        <form id="form">
+          <textarea name="textForAnalysis" id="textarea" placeholder="Digite seu e-mail/texto aqui"></textarea>
+          <div class="form-btns">
+            <div class="input-file-container">
+              <img src="./img/paper-clip.png" alt="icone de clipe de papel" class="paper-clip">
+              <input type="file" class="input-file">
+              Anexar arquivo
+            </div>
+            <button type="submit" class="submit-form">Analisar E-mail</button>
+          </div>
 
-        <div class="category-container">
-          <h4>Categoria: <span>#improdutivo</span></h4>
+        </form>
+
+        <div class="analysis-response">
+
+          <div class="category-container">
+            <h4>Categoria: <span>#improdutivo</span></h4>
+          </div>
+
+
+          <textarea name="" id="" disabled>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis iste molestiae dolorem delectus cumque quisquam possimus suscipit non voluptate dicta? Inventore deserunt natus debitis ratione incidunt in pariatur, vel aspernatur.
+          </textarea>
+
+          <img src="./img/copy.png" alt="" class="copy-icon">
         </div>
 
 
-        <textarea name="" id="" disabled>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis iste molestiae dolorem delectus cumque quisquam possimus suscipit non voluptate dicta? Inventore deserunt natus debitis ratione incidunt in pariatur, vel aspernatur.
-        </textarea>
+      </main>
 
-        <img src="./img/copy.png" alt="" class="copy-icon">
-      </div>
+    </div>
 
-
-    </main>
-
-
-
-
-
-
-
-
+  
 
     
     <script type="module" src="/src/main.js"></script>
