created example card for both productive and unproductive

--- a/index.html
+++ b/index.html
@@ -34,6 +34,37 @@
 
         </form>
 
+        <p>Ou experimente um dos nossos exemplos:</p>
+        <div class="examples">
+          
+
+          <div class="card-example">
+            <div class="card-texts">
+              <h4 class="card-title">Exemplo Produtivo</h4>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolores</p>
+            </div>
+
+            <button class="card-btn">Analisar este e-mail</button>
+          </div>
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <div class="analysis-response">
 
           <div class="category-container">
