card examples front end finished

--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
           </div>
 
 
+          <div class="card-example">
+            <div class="card-texts">
+              <h4 class="card-title">Exemplo Improdutivo</h4>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolores</p>
+            </div>
+
+            <button class="card-btn">Analisar este e-mail</button>
+          </div>
+
+          <div class="card-example">
+            <div class="card-texts">
+              <h4 class="card-title">Exemplo Outros</h4>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolores</p>
+            </div>
+
+            <button class="card-btn">Analisar este e-mail</button>
+          </div>
+
         </div>
 
 
