front-end of the app finished

--- a/index.html
+++ b/index.html
@@ -70,30 +70,29 @@
 
 
 
+        <div class="analysis-section">
 
-
-
-
-
-
-
-
-
-
-
-
-
-        <div class="analysis-response">
-
-          <div class="category-container">
-            <h4>Categoria: <span>#improdutivo</span></h4>
+          <div class="analysis-title">
+            <h1 class="analysis-title">Resultado da Análise</h1>
+            <h4 class="category-title">Classificação</h4>
           </div>
 
 
-          <textarea name="" id="" disabled>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis iste molestiae dolorem delectus cumque quisquam possimus suscipit non voluptate dicta? Inventore deserunt natus debitis ratione incidunt in pariatur, vel aspernatur.
-          </textarea>
+          <div id="category-section">
+            <div class="dot"></div>
+            <p class="category">Produtivo</p>
+          </div>
 
-          <img src="./img/copy.png" alt="" class="copy-icon">
+          <h4 class="response-title">Resposta Sugerida</h4>
+          <div class="response-suggestion">
+            
+            <p class="response">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis iste molestiae dolorem delectus cumque quisquam possimus suscipit non voluptate dicta? Inventore deserunt natus debitis ratione incidunt in pariatur, vel aspernatur.
+            </p>
+            <img src="./img/copy.png" alt="" class="copy-icon">
+
+            
+          </div>
+
         </div>
 
 
