backend ok, app working

--- a/index.html
+++ b/index.html
@@ -40,30 +40,30 @@
 
           <div class="card-example">
             <div class="card-texts">
-              <h4 class="card-title">Exemplo Produtivo</h4>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolores</p>
+              <h4 class="card-title productive-color">Exemplo Produtivo</h4>
+              <p class="card-text">Prezado(a), Gostaria de agendar a reunião de kickoff....</p>
             </div>
 
-            <button class="card-btn">Analisar este e-mail</button>
+            <button class="card-btn">Utilizar exemplo</button>
           </div>
 
 
           <div class="card-example">
             <div class="card-texts">
-              <h4 class="card-title">Exemplo Improdutivo</h4>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolores</p>
+              <h4 class="card-title unproductive-color">Exemplo Improdutivo</h4>
+              <p class="card-text">Ganhe um iPhone 15 Pro Max grátis! Clique no link...</p>
             </div>
 
-            <button class="card-btn">Analisar este e-mail</button>
+            <button class="card-btn">Utilizar exemplo</button>
           </div>
 
           <div class="card-example">
             <div class="card-texts">
               <h4 class="card-title">Exemplo Outros</h4>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam dolores</p>
+              <p class="card-text">Olá Equipe, O café da máquina do 3º andar acabou...</p>
             </div>
 
-            <button class="card-btn">Analisar este e-mail</button>
+            <button class="card-btn">Utilizar exemplo</button>
           </div>
 
         </div>
